[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/bullets/zipBomb.png" type="Texture" id=1]
[ext_resource path="res://scenes_and_scripts/bullets/zipBomb/zipBomb.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 12 )

[node name="virusZipBomb" type="Area2D"]
script = ExtResource( 2 )

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="falling" type="Tween" parent="."]

[node name="positioning" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_virusZipBomb_area_entered"]
[connection signal="tween_all_completed" from="falling" to="." method="_on_falling_tween_all_completed"]
[connection signal="tween_all_completed" from="positioning" to="." method="_on_positioning_tween_all_completed"]
